# mpact-riscv

./: .bazelrc  .gitignore  AGENTS.md  MODULE.bazel  WORKSPACE  harness.yaml
docs/: vmlinux_build_instructions.md
riscv/: BUILD  fix.py  mmu_sv39.cc  mmu_sv39.h  riscv_bin_setters.h  riscv_bitmanip_instructions.cc  riscv_bitmanip_instructions.h  riscv_boot.cc  riscv_boot.h  riscv_clint.cc  riscv_clint.h  riscv_csr.h  riscv_d_instructions.cc  riscv_debug_interface.h  riscv_dtb_loader.cc  riscv_dtb_loader.h  riscv_f_instructions.cc  riscv_generic_decoder.h  riscv_mmu.cc  riscv_mmu.h  riscv_priv_instructions.cc  riscv_sim_csrs.cc  riscv_sim_csrs.h  riscv_state.cc  riscv_state.h  riscv_svinval.bin_fmt  riscv_svinval.isa  riscv_svinval_instructions.cc  riscv_svinval_instructions.h  riscv_top.cc  riscv_top.h  riscv_vector.isa  riscv_vector_fp_unary_instructions.cc  riscv_xip_xie.h  riscv_xstatus.h  riscv_zawrs.bin_fmt  riscv_zawrs.isa  riscv_zawrs_instructions.cc  riscv_zawrs_instructions.h  riscv_zc.bin_fmt  (+46 more)
riscv/test/: BUILD  mmu_sv39_test.cc  riscv32_bitmanip_instructions_test.cc  riscv_boot_test.cc  riscv_breakpoint_test.cc  riscv_clint_plic_hardware_interrupt_test.cc  riscv_csr_test.cc  riscv_dtb_loader_test.cc  riscv_mmu_test.cc  riscv_smcntrpmf_test.cc  riscv_smstateen_test.cc  riscv_sstc_test.cc  riscv_state_test.cc  riscv_top_test.cc  riscv_trap_integration_test.cc  riscv_vector_fp_organic_test.cc  riscv_vector_fp_unary_instructions_test.cc  riscv_zawrs_instructions_test.cc  (+15 more)
sim/: BUILD  trap_strings.h
testfiles/: BUILD  vmlinux.S  vmlinux.elf  vmlinux.ld
(+18 files in other folders)
