module(
    name = "mpact_riscv",
    version = "1.0.0",
)

bazel_dep(name = "abseil-cpp", version = "20240116.2")
bazel_dep(name = "protobuf", version = "29.0", repo_name = "com_google_protobuf")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1", repo_name = "com_google_googletest")
bazel_dep(name = "re2", version = "2023-11-01", repo_name = "com_googlesource_code_re2")
bazel_dep(name = "rules_cc", version = "0.1.3")

bazel_dep(name = "com_google_mpact-sim")
local_path_override(
    module_name = "com_google_mpact-sim",
    path = "../mpact-sim",
)
